# pytorch_wav_dataset

./: README.md  dataset.py  pyproject.toml  transforms.py  using_it.py
